--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,16 @@ group = mod_group_id
 
 repositories {
     mavenLocal()
+    maven {
+        url "https://maven.blamejared.com"
+    }
+
+    maven {
+        url "https://maven.k-4u.nl"
+    }
+    maven {
+        url "https://cursemaven.com"
+    }
 }
 
 base {
@@ -51,7 +61,6 @@ neoForge {
 
         server {
             server()
-            programArgument '--nogui'
             systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
         }
 
@@ -133,6 +142,14 @@ dependencies {
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
+    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
+    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
+    runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
+
+    implementation "curse.maven:mekanism-268560:5665698"
+
+    implementation "mcjty.theoneprobe:theoneprobe:${top_version}"
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
